2006-07-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/Makefile.am: Fixed a bug that caused multiple definition
	errors during linking the IT++ debugging library. 

	* configure.ac: Fixed a minor problem with using AC_DISABLE_SHARED
	macro for Windows environments. 

	* **/*.{h,cpp}: Copyright date updated to `1995-2006'.

	* configure.ac: Version numbers and Copyright date updated.

==============================================================================

2006-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.3 released (SVN tag: release-3-10-3)

	* NEWS: Updated to reflect recent fixes.

	* configure.ac: Increased itpp-external version number to 2.3.0.

2006-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/eigen_test.cpp: Fixed bug [1516976] by setting the
	threshold of round_to_zero() function to 1e-13. Thanks to Rosario
	for reporting this bug.

2006-06-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, Makefile.am, itpp/Makefile.am, itpp/sources.mk,
	tests/Makefile.am, doc/local/installation.doc, INSTALL, TODO:
	Modularisation of the IT++ library implemented. It is now possible
	to skip the building of various modules using a set of
	`--disable-*' switches with the configure script. The
	documentation has been updated accordingly.

2006-06-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/convcode.h, itpp/comm/convcode.cpp: Fixed bug
	[1506524]. The `K' variable is now initialised in the
	Convolutional_Code default constructor. Thanks to Hakan Eriksson
	for finding this bug.

2006-06-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Cosmetic changes in page layout.

2006-05-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/gf2mat_test.cpp: Missing initialisation added.

2006-05-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc, itpp/comm/bch.cpp,
	itpp/comm/bch.h, itpp/comm/reedsolomon.cpp,