@@ -37,21 +37,33 @@
 #include <itpp/base/converters.h>
 #include <cmath>
 
+#ifndef _MSC_VER
+#  include <itpp/config.h>
+#else
+#  include <itpp/config_msvc.h>
+#endif
+
 
 //!\addtogroup miscfunc
 //!@{
 
+#ifndef HAVE_TGAMMA
 //! True gamma function
 double tgamma(double x);
+#endif
 
+#if !defined(HAVE_LGAMMA) || (HAVE_DECL_SIGNGAM != 1)
 //! Lograrithm of an absolute gamma function
 double lgamma(double x);
 extern int signgam;
+#endif
 
+#ifndef HAVE_CBRT
 //! Cubic root
 double cbrt(double x);
-//!@}
+#endif
 
+//!@}
 
 namespace itpp {
 
